added link to github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="download">DOWNLOAD</button>
     </div>
     <footer>
-        <p><a href=""><i class="fab fa-github-square"></i></a></p>
+        <p><a href="https://github.com/ianbrdeguzman/progressbar"><i class="fab fa-github-square"></i></a></p>
     </footer>
 </body>
 </html>
